# SFMLGeometryGame

./: CMakeLists.txt  config.ini  main.cpp
classes/: Bullet.h  Config.h  Enemy.h  Entity.h  Game.h  MyText.h  Player.h  RandomRange.h  Vector.h
